project('ambiqsdk', 'c',
  default_options: ['b_lto=false', 'b_staticpic=false'],
  license: ['AM-BSD-3-Clause'],
  version: files('VERSION.txt'))

devices_src = files([
  'devices/am_devices_button.c',
  #'devices/am_devices_da14581.c',
  #'devices/am_devices_em9304.c',
  #'devices/am_devices_fireball.c',
  'devices/am_devices_led.c',
  #'devices/am_devices_mb85rc256v.c',
  #'devices/am_devices_mb85rs1mt.c',
  #'devices/am_devices_mspi_atxp032.c',
  #'devices/am_devices_mspi_psram_aps6404l.c',
  #'devices/am_devices_mspi_rm67162.c',
  #'devices/am_devices_mspi_s25fs064s.c',
  #'devices/am_devices_spiflash.c',
])

utils_src = files([
  'utils/am_util_ble.c',
  #'utils/am_util_debug.c', # this file is empty?
  'utils/am_util_delay.c',
  #'utils/am_util_faultisr.c',
  'utils/am_util_id.c',
  #'utils/am_util_regdump.c',
  'utils/am_util_stdio.c',
  'utils/am_util_string.c',
  'utils/am_util_time.c',
])

rba_atp_src = files([
  'boards_sfe/redboard_artemis_atp/bsp/am_bsp.c',
  'boards_sfe/redboard_artemis_atp/bsp/am_bsp_pins.c',
  'boards_sfe/common/tools_sfe/templates/startup_gcc.c',
  'boards_sfe/common/tools_sfe/templates/startup_gcc.S',
])

apollo3_src = files([
  'mcu/apollo3/hal/am_hal_adc.c',
  'mcu/apollo3/hal/am_hal_ble.c',
  'mcu/apollo3/hal/am_hal_ble_patch.c',
  'mcu/apollo3/hal/am_hal_ble_patch_b0.c',
  'mcu/apollo3/hal/am_hal_burst.c',
  'mcu/apollo3/hal/am_hal_cachectrl.c',
  'mcu/apollo3/hal/am_hal_clkgen.c',
  'mcu/apollo3/hal/am_hal_cmdq.c',
  'mcu/apollo3/hal/am_hal_ctimer.c',
  'mcu/apollo3/hal/am_hal_debug.c',
  'mcu/apollo3/hal/am_hal_flash.c',
  'mcu/apollo3/hal/am_hal_global.c',
  'mcu/apollo3/hal/am_hal_gpio.c',
  'mcu/apollo3/hal/am_hal_interrupt.c',
  'mcu/apollo3/hal/am_hal_iom.c',
  'mcu/apollo3/hal/am_hal_ios.c',
  'mcu/apollo3/hal/am_hal_itm.c',
  'mcu/apollo3/hal/am_hal_mcuctrl.c',
  'mcu/apollo3/hal/am_hal_mspi.c',
  'mcu/apollo3/hal/am_hal_pdm.c',
  'mcu/apollo3/hal/am_hal_pwrctrl.c',
  'mcu/apollo3/hal/am_hal_queue.c',
  'mcu/apollo3/hal/am_hal_reset.c',
  'mcu/apollo3/hal/am_hal_rtc.c',
  'mcu/apollo3/hal/am_hal_scard.c',
  'mcu/apollo3/hal/am_hal_secure_ota.c',
  'mcu/apollo3/hal/am_hal_security.c',
  'mcu/apollo3/hal/am_hal_stimer.c',
  'mcu/apollo3/hal/am_hal_sysctrl.c',
  'mcu/apollo3/hal/am_hal_systick.c',
  'mcu/apollo3/hal/am_hal_tpiu.c',
  'mcu/apollo3/hal/am_hal_uart.c',
  'mcu/apollo3/hal/am_hal_wdt.c',
])

rba_atp_includes = [
  'boards_sfe/redboard_artemis_atp/bsp/',
  'mcu/apollo3/',
  'mcu/apollo/hal',
  'mcu/apollo/regs',
]

sdk_includes = [
  'utils/',
  'devices/',
  'CMSIS/AmbiqMicro/Include',
  'CMSIS/ARM/Include',
]

includes_str = rba_atp_includes + sdk_includes
includes = include_directories(includes_str)

header_files = files([
  'ambiq_ble/apps/amdtpc/amdtp_api.h',
  'ambiq_ble/apps/amdtps/amdtp_api.h',
  'ambiq_ble/apps/amota/amota_api.h',
  'ambiq_ble/apps/ancs/ancs_api.h',
  'ambiq_ble/apps/beaconscanner/beaconscanner_api.h',
  'ambiq_ble/apps/ibeacon/ibeacon_api.h',
  'ambiq_ble/apps/prodtest_datc/prodtest_datc_api.h',
  'ambiq_ble/apps/prodtest_dats/prodtest_dats_api.h',
  'ambiq_ble/apps/vole/voice_data.h',
  'ambiq_ble/apps/vole/vole_api.h',
  'ambiq_ble/em9304/em9304_init.h',
  'ambiq_ble/em9304/em9304_patches.h',
  'ambiq_ble/menu/ble_menu.h',
  'ambiq_ble/profiles/amdtpc/amdtpc_api.h',
  'ambiq_ble/profiles/amdtpcommon/amdtp_common.h',
  'ambiq_ble/profiles/amdtps/amdtps_api.h',
  'ambiq_ble/profiles/amota/amotas_api.h',
  'ambiq_ble/profiles/ancc/ancc_api.h',
  'ambiq_ble/profiles/vole/voles_api.h',
  'ambiq_ble/profiles/volecommon/codec/ama/am_app_KWD_AMA.h',
  'ambiq_ble/profiles/volecommon/codec/ama/pb/accessories.pb.h',
  'ambiq_ble/profiles/volecommon/codec/ama/pb/calling.pb.h',
  'ambiq_ble/profiles/volecommon/codec/ama/pb/central.pb.h',
  'ambiq_ble/profiles/volecommon/codec/ama/pb/common.pb.h',
  'ambiq_ble/profiles/volecommon/codec/ama/pb/device.pb.h',
  'ambiq_ble/profiles/volecommon/codec/ama/pb/media.pb.h',
  'ambiq_ble/profiles/volecommon/codec/ama/pb/pb.h',
  'ambiq_ble/profiles/volecommon/codec/ama/pb/pb_common.h',
  'ambiq_ble/profiles/volecommon/codec/ama/pb/pb_decode.h',
  'ambiq_ble/profiles/volecommon/codec/ama/pb/pb_encode.h',
  'ambiq_ble/profiles/volecommon/codec/ama/pb/speech.pb.h',
  'ambiq_ble/profiles/volecommon/codec/ama/pb/state.pb.h',
  'ambiq_ble/profiles/volecommon/codec/ama/pb/system.pb.h',
  'ambiq_ble/profiles/volecommon/codec/ama/pb/transport.pb.h',
  'ambiq_ble/profiles/volecommon/codec/opus/ae_api.h',
  'ambiq_ble/profiles/volecommon/codec/sbc/sbc.h',
  'ambiq_ble/profiles/volecommon/vole_common.h',
  'ambiq_ble/profile_appl/amdtpcommon/amdtp_common.h',
  'ambiq_ble/profile_appl/amdtps/appl_amdtps.h',
  'ambiq_ble/profile_appl/amdtps/gatt_db.h',
  'ambiq_ble/profile_appl/amota/appl_amota.h',
  'ambiq_ble/profile_appl/amota/gatt_db.h',
  'ambiq_ble/profile_appl/ams/appl_ams.h',
  'ambiq_ble/profile_appl/ams/appl_ams_att_server.h',
  'ambiq_ble/profile_appl/ams/gatt_db.h',
  'ambiq_ble/profile_appl/ancs/appl_ancs.h',
  'ambiq_ble/profile_appl/ancs/appl_ancs_att_server.h',
  'ambiq_ble/profile_appl/ancs/gatt_db.h',
  'ambiq_ble/profile_appl/ibeacon/appl_ibeacon.h',
  'ambiq_ble/profile_appl/ibeacon/gatt_db.h',
  'ambiq_ble/services/svc_amdtp.h',
  'ambiq_ble/services/svc_amotas.h',
  'ambiq_ble/services/svc_amvole.h',
  'boards/apollo1_evb/bsp/am_bsp.h',
  'boards/apollo1_evb/bsp/am_bsp_gpio.h',
  'boards/apollo1_evb/examples/coremark/src/ambiq_core_config.h',
  'boards/apollo1_evb/examples/coremark/src/am_time.h',
  'boards/apollo1_evb/examples/coremark/src/coremark.h',
  'boards/apollo1_evb/examples/coremark/src/core_portme.h',
  'boards/apollo1_evb/examples/freertos_lowpower/src/FreeRTOSConfig.h',
  'boards/apollo1_evb/examples/freertos_lowpower/src/freertos_lowpower.h',
  'boards/apollo1_evb/examples/freertos_lowpower/src/led_task.h',
  'boards/apollo1_evb/examples/freertos_lowpower/src/rtos.h',
  'boards/apollo1_evb/examples/i2c_boot_host/src/apollo2_boot_demo.h',
  'boards/apollo1_evb/examples/i2c_boot_host/src/apollo_boot_demo.h',
  'boards/apollo1_evb/examples/multi_boot/src/am_multi_boot_config.h',
  'boards/apollo1_evb/examples/multi_boot/src/extflash.h',
  'boards/apollo1_evb/examples/multi_boot_secure_sample/src/am_multi_boot_config.h',
  'boards/apollo1_evb/examples/spi_boot_host/src/apollo2_boot_demo.h',
  'boards/apollo1_evb/examples/spi_boot_host/src/apollo_boot_demo.h',
  'boards/apollo2_blue_evb/bsp/am_bsp.h',
  'boards/apollo2_blue_evb/bsp/am_bsp_gpio.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amdtpc/src/ble_freertos_amdtpc.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amdtpc/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amdtpc/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amdtpc/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amdtpc/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amdtps/src/ble_freertos_amdtps.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amdtps/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amdtps/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amdtps/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amdtps/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota/src/amota_profile_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota/src/ble_freertos_amota.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota/src/extflash.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota/src/led_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota_blinky/src/amota_profile_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota_blinky/src/ble_freertos_amota_blinky.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota_blinky/src/extflash.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota_blinky/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota_blinky/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota_blinky/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_amota_blinky/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_ancs/src/ble_freertos_ancs.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_ancs/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_ancs/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_ancs/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_ancs/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_beaconscanner/src/ble_freertos_beaconscanner.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_beaconscanner/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_beaconscanner/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_beaconscanner/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_beaconscanner/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_datc/src/ble_freertos_datc.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_datc/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_datc/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_datc/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_datc/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_dats/src/ble_freertos_dats.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_dats/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_dats/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_dats/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_dats/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_eddystone_url/src/ble_freertos_eddystone_url.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_eddystone_url/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_eddystone_url/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_eddystone_url/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_eddystone_url/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_fcc_test/src/ble_freertos_fcc_test.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_fcc_test/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_fcc_test/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_fcc_test/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_fcc_test/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_fit/src/ble_freertos_fit.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_fit/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_fit/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_fit/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_fit/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_hid/src/ble_freertos_hid.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_hid/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_hid/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_hid/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_hid/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_ibeacon/src/ble_freertos_ibeacon.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_ibeacon/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_ibeacon/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_ibeacon/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_ibeacon/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_power_cycle/src/ble_freertos_power_cycle.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_power_cycle/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_power_cycle/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_power_cycle/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_power_cycle/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_prodtest_datc/src/ble_freertos_prodtest_datc.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_prodtest_datc/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_prodtest_datc/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_prodtest_datc/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_prodtest_datc/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_prodtest_dats/src/ble_freertos_prodtest_dats.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_prodtest_dats/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_prodtest_dats/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_prodtest_dats/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_prodtest_dats/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_tag/src/ble_freertos_tag.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_tag/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_tag/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_tag/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_tag/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_txpower_ctrl/src/ble_freertos_txpower_ctrl.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_txpower_ctrl/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_txpower_ctrl/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_txpower_ctrl/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_txpower_ctrl/src/rtos.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_watch/src/ble_freertos_watch.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_watch/src/FreeRTOSConfig.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_watch/src/hci_apollo_config.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_watch/src/radio_task.h',
  'boards/apollo2_blue_evb/examples/ble_freertos_watch/src/rtos.h',
  'boards/apollo2_blue_evb/examples/coremark/src/ambiq_core_config.h',
  'boards/apollo2_blue_evb/examples/coremark/src/am_time.h',
  'boards/apollo2_blue_evb/examples/coremark/src/coremark.h',
  'boards/apollo2_blue_evb/examples/coremark/src/core_portme.h',
  'boards/apollo2_evb/bsp/am_bsp.h',
  'boards/apollo2_evb/bsp/am_bsp_gpio.h',
  'boards/apollo2_evb/examples/coremark/src/ambiq_core_config.h',
  'boards/apollo2_evb/examples/coremark/src/am_time.h',
  'boards/apollo2_evb/examples/coremark/src/coremark.h',
  'boards/apollo2_evb/examples/coremark/src/core_portme.h',
  'boards/apollo2_evb/examples/flash_write_apollo2/src/flash_write_apollo2_info_block.h',
  'boards/apollo2_evb/examples/flash_write_apollo2/src/flash_write_apollo2_main_block.h',
  'boards/apollo2_evb/examples/freertos_lowpower/src/FreeRTOSConfig.h',
  'boards/apollo2_evb/examples/freertos_lowpower/src/freertos_lowpower.h',
  'boards/apollo2_evb/examples/freertos_lowpower/src/led_task.h',
  'boards/apollo2_evb/examples/freertos_lowpower/src/rtos.h',
  'boards/apollo2_evb/examples/i2c_boot_host/src/apollo2_boot_demo.h',
  'boards/apollo2_evb/examples/i2c_boot_host/src/apollo_boot_demo.h',
  'boards/apollo2_evb/examples/multi_boot/src/am_multi_boot_config.h',
  'boards/apollo2_evb/examples/multi_boot/src/extflash.h',
  'boards/apollo2_evb/examples/multi_boot_secure_sample/src/am_multi_boot_config.h',
  'boards/apollo2_evb/examples/spi_boot_host/src/apollo2_boot_demo.h',
  'boards/apollo2_evb/examples/spi_boot_host/src/apollo_boot_demo.h',
  'boards/apollo3p_evb/bsp/am_bsp.h',
  'boards/apollo3p_evb/bsp/am_bsp_pins.h',
  'boards/apollo3p_evb/examples/ble_freertos_amdtpc/src/ble_freertos_amdtpc.h',
  'boards/apollo3p_evb/examples/ble_freertos_amdtpc/src/FreeRTOSConfig.h',
  'boards/apollo3p_evb/examples/ble_freertos_amdtpc/src/hci_apollo_config.h',
  'boards/apollo3p_evb/examples/ble_freertos_amdtpc/src/radio_task.h',
  'boards/apollo3p_evb/examples/ble_freertos_amdtpc/src/rtos.h',
  'boards/apollo3p_evb/examples/ble_freertos_amdtps/src/ble_freertos_amdtps.h',
  'boards/apollo3p_evb/examples/ble_freertos_amdtps/src/FreeRTOSConfig.h',
  'boards/apollo3p_evb/examples/ble_freertos_amdtps/src/hci_apollo_config.h',
  'boards/apollo3p_evb/examples/ble_freertos_amdtps/src/radio_task.h',
  'boards/apollo3p_evb/examples/ble_freertos_amdtps/src/rtos.h',
  'boards/apollo3p_evb/examples/ble_freertos_amota/src/amota_profile_config.h',
  'boards/apollo3p_evb/examples/ble_freertos_amota/src/ble_freertos_amota.h',
  'boards/apollo3p_evb/examples/ble_freertos_amota/src/FreeRTOSConfig.h',
  'boards/apollo3p_evb/examples/ble_freertos_amota/src/hci_apollo_config.h',
  'boards/apollo3p_evb/examples/ble_freertos_amota/src/led_task.h',
  'boards/apollo3p_evb/examples/ble_freertos_amota/src/radio_task.h',
  'boards/apollo3p_evb/examples/ble_freertos_amota/src/rtos.h',
  'boards/apollo3p_evb/examples/ble_freertos_ancs/src/ble_freertos_ancs.h',
  'boards/apollo3p_evb/examples/ble_freertos_ancs/src/FreeRTOSConfig.h',
  'boards/apollo3p_evb/examples/ble_freertos_ancs/src/hci_apollo_config.h',
  'boards/apollo3p_evb/examples/ble_freertos_ancs/src/radio_task.h',
  'boards/apollo3p_evb/examples/ble_freertos_ancs/src/rtos.h',
  'boards/apollo3p_evb/examples/ble_freertos_fcc_test/src/FreeRTOSConfig.h',
  'boards/apollo3p_evb/examples/ble_freertos_fcc_test/src/hci_apollo_config.h',
  'boards/apollo3p_evb/examples/ble_freertos_fit/src/ble_freertos_fit.h',
  'boards/apollo3p_evb/examples/ble_freertos_fit/src/FreeRTOSConfig.h',
  'boards/apollo3p_evb/examples/ble_freertos_fit/src/hci_apollo_config.h',
  'boards/apollo3p_evb/examples/ble_freertos_fit/src/radio_task.h',
  'boards/apollo3p_evb/examples/ble_freertos_fit/src/rtos.h',
  'boards/apollo3p_evb/examples/ble_freertos_fit_lp/src/ble_freertos_fit_lp.h',
  'boards/apollo3p_evb/examples/ble_freertos_fit_lp/src/FreeRTOSConfig.h',
  'boards/apollo3p_evb/examples/ble_freertos_fit_lp/src/hci_apollo_config.h',
  'boards/apollo3p_evb/examples/ble_freertos_fit_lp/src/radio_task.h',
  'boards/apollo3p_evb/examples/ble_freertos_fit_lp/src/rtos.h',
  'boards/apollo3p_evb/examples/ble_freertos_power_cycle/src/ble_freertos_power_cycle.h',
  'boards/apollo3p_evb/examples/ble_freertos_power_cycle/src/FreeRTOSConfig.h',
  'boards/apollo3p_evb/examples/ble_freertos_power_cycle/src/hci_apollo_config.h',
  'boards/apollo3p_evb/examples/ble_freertos_power_cycle/src/radio_task.h',
  'boards/apollo3p_evb/examples/ble_freertos_power_cycle/src/rtos.h',
  'boards/apollo3p_evb/examples/ble_freertos_tag/src/ble_freertos_tag.h',
  'boards/apollo3p_evb/examples/ble_freertos_tag/src/FreeRTOSConfig.h',
  'boards/apollo3p_evb/examples/ble_freertos_tag/src/hci_apollo_config.h',
  'boards/apollo3p_evb/examples/ble_freertos_tag/src/radio_task.h',
  'boards/apollo3p_evb/examples/ble_freertos_tag/src/rtos.h',
  'boards/apollo3p_evb/examples/ble_freertos_txpower_ctrl/src/ble_freertos_txpower_ctrl.h',
  'boards/apollo3p_evb/examples/ble_freertos_txpower_ctrl/src/FreeRTOSConfig.h',
  'boards/apollo3p_evb/examples/ble_freertos_txpower_ctrl/src/hci_apollo_config.h',
  'boards/apollo3p_evb/examples/ble_freertos_txpower_ctrl/src/radio_task.h',
  'boards/apollo3p_evb/examples/ble_freertos_txpower_ctrl/src/rtos.h',
  'boards/apollo3p_evb/examples/ble_freertos_watch/src/ble_freertos_watch.h',
  'boards/apollo3p_evb/examples/ble_freertos_watch/src/FreeRTOSConfig.h',
  'boards/apollo3p_evb/examples/ble_freertos_watch/src/hci_apollo_config.h',
  'boards/apollo3p_evb/examples/ble_freertos_watch/src/radio_task.h',
  'boards/apollo3p_evb/examples/ble_freertos_watch/src/rtos.h',
  'boards/apollo3p_evb/examples/coremark/src/ambiq_core_config.h',
  'boards/apollo3p_evb/examples/coremark/src/am_time.h',
  'boards/apollo3p_evb/examples/coremark/src/coremark.h',
  'boards/apollo3p_evb/examples/coremark/src/core_portme.h',
  'boards/apollo3p_evb/examples/freertos_lowpower/src/FreeRTOSConfig.h',
  'boards/apollo3p_evb/examples/freertos_lowpower/src/freertos_lowpower.h',
  'boards/apollo3p_evb/examples/freertos_lowpower/src/led_task.h',
  'boards/apollo3p_evb/examples/freertos_lowpower/src/rtos.h',
  'boards/apollo3p_evb/examples/freertos_mspi_mspi_display/src/compose_task.h',
  'boards/apollo3p_evb/examples/freertos_mspi_mspi_display/src/FreeRTOSConfig.h',
  'boards/apollo3p_evb/examples/freertos_mspi_mspi_display/src/freertos_mspi_mspi_display.h',
  'boards/apollo3p_evb/examples/freertos_mspi_mspi_display/src/main_task.h',
  'boards/apollo3p_evb/examples/freertos_mspi_mspi_display/src/render_task.h',
  'boards/apollo3p_evb/examples/freertos_mspi_mspi_display/src/rtos.h',
  'boards/apollo3_evb/bsp/am_bsp.h',
  'boards/apollo3_evb/bsp/am_bsp_pins.h',
  'boards/apollo3_evb/examples/ble_freertos_amdtpc/src/ble_freertos_amdtpc.h',
  'boards/apollo3_evb/examples/ble_freertos_amdtpc/src/FreeRTOSConfig.h',
  'boards/apollo3_evb/examples/ble_freertos_amdtpc/src/hci_apollo_config.h',
  'boards/apollo3_evb/examples/ble_freertos_amdtpc/src/radio_task.h',
  'boards/apollo3_evb/examples/ble_freertos_amdtpc/src/rtos.h',
  'boards/apollo3_evb/examples/ble_freertos_amdtps/src/ble_freertos_amdtps.h',
  'boards/apollo3_evb/examples/ble_freertos_amdtps/src/FreeRTOSConfig.h',
  'boards/apollo3_evb/examples/ble_freertos_amdtps/src/hci_apollo_config.h',
  'boards/apollo3_evb/examples/ble_freertos_amdtps/src/radio_task.h',
  'boards/apollo3_evb/examples/ble_freertos_amdtps/src/rtos.h',
  'boards/apollo3_evb/examples/ble_freertos_amota/src/amota_profile_config.h',
  'boards/apollo3_evb/examples/ble_freertos_amota/src/ble_freertos_amota.h',
  'boards/apollo3_evb/examples/ble_freertos_amota/src/FreeRTOSConfig.h',
  'boards/apollo3_evb/examples/ble_freertos_amota/src/hci_apollo_config.h',
  'boards/apollo3_evb/examples/ble_freertos_amota/src/led_task.h',
  'boards/apollo3_evb/examples/ble_freertos_amota/src/radio_task.h',
  'boards/apollo3_evb/examples/ble_freertos_amota/src/rtos.h',
  'boards/apollo3_evb/examples/ble_freertos_ancs/src/ble_freertos_ancs.h',
  'boards/apollo3_evb/examples/ble_freertos_ancs/src/FreeRTOSConfig.h',
  'boards/apollo3_evb/examples/ble_freertos_ancs/src/hci_apollo_config.h',
  'boards/apollo3_evb/examples/ble_freertos_ancs/src/radio_task.h',
  'boards/apollo3_evb/examples/ble_freertos_ancs/src/rtos.h',
  'boards/apollo3_evb/examples/ble_freertos_fit/src/ble_freertos_fit.h',
  'boards/apollo3_evb/examples/ble_freertos_fit/src/FreeRTOSConfig.h',
  'boards/apollo3_evb/examples/ble_freertos_fit/src/hci_apollo_config.h',
  'boards/apollo3_evb/examples/ble_freertos_fit/src/radio_task.h',
  'boards/apollo3_evb/examples/ble_freertos_fit/src/rtos.h',
  'boards/apollo3_evb/examples/ble_freertos_fit_lp/src/ble_freertos_fit_lp.h',
  'boards/apollo3_evb/examples/ble_freertos_fit_lp/src/FreeRTOSConfig.h',
  'boards/apollo3_evb/examples/ble_freertos_fit_lp/src/hci_apollo_config.h',
  'boards/apollo3_evb/examples/ble_freertos_fit_lp/src/radio_task.h',
  'boards/apollo3_evb/examples/ble_freertos_fit_lp/src/rtos.h',
  'boards/apollo3_evb/examples/ble_freertos_power_cycle/src/ble_freertos_power_cycle.h',
  'boards/apollo3_evb/examples/ble_freertos_power_cycle/src/FreeRTOSConfig.h',
  'boards/apollo3_evb/examples/ble_freertos_power_cycle/src/hci_apollo_config.h',
  'boards/apollo3_evb/examples/ble_freertos_power_cycle/src/radio_task.h',
  'boards/apollo3_evb/examples/ble_freertos_power_cycle/src/rtos.h',
  'boards/apollo3_evb/examples/ble_freertos_tag/src/ble_freertos_tag.h',
  'boards/apollo3_evb/examples/ble_freertos_tag/src/FreeRTOSConfig.h',
  'boards/apollo3_evb/examples/ble_freertos_tag/src/hci_apollo_config.h',
  'boards/apollo3_evb/examples/ble_freertos_tag/src/radio_task.h',
  'boards/apollo3_evb/examples/ble_freertos_tag/src/rtos.h',
  'boards/apollo3_evb/examples/ble_freertos_txpower_ctrl/src/ble_freertos_txpower_ctrl.h',
  'boards/apollo3_evb/examples/ble_freertos_txpower_ctrl/src/FreeRTOSConfig.h',
  'boards/apollo3_evb/examples/ble_freertos_txpower_ctrl/src/hci_apollo_config.h',
  'boards/apollo3_evb/examples/ble_freertos_txpower_ctrl/src/radio_task.h',
  'boards/apollo3_evb/examples/ble_freertos_txpower_ctrl/src/rtos.h',
  'boards/apollo3_evb/examples/ble_freertos_watch/src/ble_freertos_watch.h',
  'boards/apollo3_evb/examples/ble_freertos_watch/src/FreeRTOSConfig.h',
  'boards/apollo3_evb/examples/ble_freertos_watch/src/hci_apollo_config.h',
  'boards/apollo3_evb/examples/ble_freertos_watch/src/radio_task.h',
  'boards/apollo3_evb/examples/ble_freertos_watch/src/rtos.h',
  'boards/apollo3_evb/examples/coremark/src/ambiq_core_config.h',
  'boards/apollo3_evb/examples/coremark/src/am_time.h',
  'boards/apollo3_evb/examples/coremark/src/coremark.h',
  'boards/apollo3_evb/examples/coremark/src/core_portme.h',
  'boards/apollo3_evb/examples/freertos_lowpower/src/FreeRTOSConfig.h',
  'boards/apollo3_evb/examples/freertos_lowpower/src/freertos_lowpower.h',
  'boards/apollo3_evb/examples/freertos_lowpower/src/led_task.h',
  'boards/apollo3_evb/examples/freertos_lowpower/src/rtos.h',
  'boards_sfe/artemis_dk/bsp/am_bsp.h',
  'boards_sfe/artemis_dk/bsp/am_bsp_pins.h',
  'boards_sfe/artemis_module/bsp/am_bsp.h',
  'boards_sfe/artemis_module/bsp/am_bsp_pins.h',
  'boards_sfe/artemis_thing_plus/bsp/am_bsp.h',
  'boards_sfe/artemis_thing_plus/bsp/am_bsp_pins.h',
  'boards_sfe/common/examples/ble_freertos_tag/src/ble_freertos_tag.h',
  'boards_sfe/common/examples/ble_freertos_tag/src/FreeRTOSConfig.h',
  'boards_sfe/common/examples/ble_freertos_tag/src/hci_apollo_config.h',
  'boards_sfe/common/examples/ble_freertos_tag/src/radio_task.h',
  'boards_sfe/common/examples/ble_freertos_tag/src/rtos.h',
  'boards_sfe/common/examples/linker_tests/main.h',
  'boards_sfe/common/examples/linker_tests/tests/heap/test_heap.h',
  'boards_sfe/common/examples/linker_tests/tests/stack/test_stack.h',
  'boards_sfe/common/examples/linker_tests/tests/tests.h',
  'boards_sfe/common/examples/linker_tests/test_framework/test_framework.h',
  'boards_sfe/common/examples/startup_tests/main.h',
  'boards_sfe/common/examples/startup_tests/tests/bss/test_bss.h',
  'boards_sfe/common/examples/startup_tests/tests/constructors/test_constructors.h',
  'boards_sfe/common/examples/startup_tests/tests/data/test_data.h',
  'boards_sfe/common/examples/startup_tests/tests/fn_init/test_fn_init.h',
  'boards_sfe/common/examples/startup_tests/tests/tests.h',
  'boards_sfe/common/examples/startup_tests/test_framework/test_framework.h',
  'boards_sfe/common/third_party/hm01b0/HM01B0.h',
  'boards_sfe/common/third_party/hm01b0/HM01B0_RAW8_QVGA_8bits_lsb_5fps.h',
  'boards_sfe/common/third_party/hm01b0/HM01B0_Walking1s_01.h',
  'boards_sfe/common/third_party/hm01b0/platform.h',
  'boards_sfe/common/third_party/lis2dh12/lis2dh12_platform_apollo3.h',
  'boards_sfe/common/third_party/lis2dh12/lis2dh12_reg.h',
  'boards_sfe/common/tools_sfe/svl/bootloader/src/svl_packet/svl_packet.h',
  'boards_sfe/common/tools_sfe/svl/bootloader/src/svl_ringbuf/svl_ringbuf.h',
  'boards_sfe/common/tools_sfe/svl/bootloader/src/svl_uart/svl_uart.h',
  'boards_sfe/common/tools_sfe/svl/bootloader/src/svl_utils/svl_utils.h',
  'boards_sfe/edge/bsp/am_bsp.h',
  'boards_sfe/edge/bsp/am_bsp_pins.h',
  'boards_sfe/edge2/bsp/am_bsp.h',
  'boards_sfe/edge2/bsp/am_bsp_pins.h',
  'boards_sfe/redboard_artemis/bsp/am_bsp.h',
  'boards_sfe/redboard_artemis/bsp/am_bsp_pins.h',
  'boards_sfe/redboard_artemis_atp/bsp/am_bsp.h',
  'boards_sfe/redboard_artemis_atp/bsp/am_bsp_pins.h',
  'boards_sfe/redboard_artemis_nano/bsp/am_bsp.h',
  'boards_sfe/redboard_artemis_nano/bsp/am_bsp_pins.h',
  'bootloader/am_bootloader.h',
  'bootloader/am_multi_boot.h',
  'bootloader/am_multi_boot_private.h',
  'bootloader/am_multi_boot_secure.h',
  'CMSIS/AmbiqMicro/Include/apollo1.h',
  'CMSIS/AmbiqMicro/Include/apollo2.h',
  'CMSIS/AmbiqMicro/Include/apollo3.h',
  'CMSIS/AmbiqMicro/Include/apollo3p.h',
  'CMSIS/AmbiqMicro/Include/system_apollo1.h',
  'CMSIS/AmbiqMicro/Include/system_apollo2.h',
  'CMSIS/AmbiqMicro/Include/system_apollo3.h',
  'CMSIS/AmbiqMicro/Include/system_apollo3p.h',
  'CMSIS/ARM/Include/arm_math.h',
  'CMSIS/ARM/Include/cmsis_armcc.h',
  'CMSIS/ARM/Include/cmsis_armclang.h',
  'CMSIS/ARM/Include/cmsis_compiler.h',
  'CMSIS/ARM/Include/cmsis_gcc.h',
  'CMSIS/ARM/Include/cmsis_iccarm.h',
  'CMSIS/ARM/Include/cmsis_version.h',
  'CMSIS/ARM/Include/core_cm4.h',
  'CMSIS/ARM/Include/mpu_armv7.h',
  'devices/am_devices.h',
  'devices/am_devices_button.h',
  'devices/am_devices_da14581.h',
  'devices/am_devices_em9304.h',
  'devices/am_devices_fireball.h',
  'devices/am_devices_led.h',
  'devices/am_devices_mb85rc256v.h',
  'devices/am_devices_mb85rs1mt.h',
  'devices/am_devices_mspi_atxp032.h',
  'devices/am_devices_mspi_psram_aps6404l.h',
  'devices/am_devices_mspi_rm67162.h',
  'devices/am_devices_mspi_s25fs064s.h',
  'devices/am_devices_spiflash.h',
  'mcu/am_sdk_version.h',
  'mcu/apollo/am_mcu_apollo.h',
  'mcu/apollo/hal/am_hal_adc.h',
  'mcu/apollo/hal/am_hal_cachectrl.h',
  'mcu/apollo/hal/am_hal_clkgen.h',
  'mcu/apollo/hal/am_hal_ctimer.h',
  'mcu/apollo/hal/am_hal_debug.h',
  'mcu/apollo/hal/am_hal_flash.h',
  'mcu/apollo/hal/am_hal_global.h',
  'mcu/apollo/hal/am_hal_gpio.h',
  'mcu/apollo/hal/am_hal_i2c_bit_bang.h',
  'mcu/apollo/hal/am_hal_interrupt.h',
  'mcu/apollo/hal/am_hal_iom.h',
  'mcu/apollo/hal/am_hal_ios.h',
  'mcu/apollo/hal/am_hal_itm.h',
  'mcu/apollo/hal/am_hal_mcuctrl.h',
  'mcu/apollo/hal/am_hal_otp.h',
  'mcu/apollo/hal/am_hal_pin.h',
  'mcu/apollo/hal/am_hal_pwrctrl.h',
  'mcu/apollo/hal/am_hal_queue.h',
  'mcu/apollo/hal/am_hal_reset.h',
  'mcu/apollo/hal/am_hal_rtc.h',
  'mcu/apollo/hal/am_hal_sysctrl.h',
  'mcu/apollo/hal/am_hal_systick.h',
  'mcu/apollo/hal/am_hal_tpiu.h',
  'mcu/apollo/hal/am_hal_uart.h',
  'mcu/apollo/hal/am_hal_vcomp.h',
  'mcu/apollo/hal/am_hal_wdt.h',
  'mcu/apollo/regs/am_reg_adc.h',
  'mcu/apollo/regs/am_reg_base_addresses.h',
  'mcu/apollo/regs/am_reg_clkgen.h',
  'mcu/apollo/regs/am_reg_ctimer.h',
  'mcu/apollo/regs/am_reg_gpio.h',
  'mcu/apollo/regs/am_reg_iomstr.h',
  'mcu/apollo/regs/am_reg_ioslave.h',
  'mcu/apollo/regs/am_reg_itm.h',
  'mcu/apollo/regs/am_reg_jedec.h',
  'mcu/apollo/regs/am_reg_macros.h',
  'mcu/apollo/regs/am_reg_macros_asm.h',
  'mcu/apollo/regs/am_reg_mcuctrl.h',
  'mcu/apollo/regs/am_reg_nvic.h',
  'mcu/apollo/regs/am_reg_rstgen.h',
  'mcu/apollo/regs/am_reg_rtc.h',
  'mcu/apollo/regs/am_reg_sysctrl.h',
  'mcu/apollo/regs/am_reg_systick.h',
  'mcu/apollo/regs/am_reg_tpiu.h',
  'mcu/apollo/regs/am_reg_uart.h',
  'mcu/apollo/regs/am_reg_vcomp.h',
  'mcu/apollo/regs/am_reg_wdt.h',
  'mcu/apollo2/am_mcu_apollo.h',
  'mcu/apollo2/hal/am_hal_i2c_bit_bang.h',
  'mcu/apollo2/hal/am_hal_adc.h',
  'mcu/apollo2/hal/am_hal_cachectrl.h',
  'mcu/apollo2/hal/am_hal_clkgen.h',
  'mcu/apollo2/hal/am_hal_ctimer.h',
  'mcu/apollo2/hal/am_hal_debug.h',
  'mcu/apollo2/hal/am_hal_flash.h',
  'mcu/apollo2/hal/am_hal_global.h',
  'mcu/apollo2/hal/am_hal_gpio.h',
  'mcu/apollo2/hal/am_hal_interrupt.h',
  'mcu/apollo2/hal/am_hal_iom.h',
  'mcu/apollo2/hal/am_hal_ios.h',
  'mcu/apollo2/hal/am_hal_itm.h',
  'mcu/apollo2/hal/am_hal_mcuctrl.h',
  'mcu/apollo2/hal/am_hal_otp.h',
  'mcu/apollo2/hal/am_hal_pdm.h',
  'mcu/apollo2/hal/am_hal_pin.h',
  'mcu/apollo2/hal/am_hal_pwrctrl.h',
  'mcu/apollo2/hal/am_hal_queue.h',
  'mcu/apollo2/hal/am_hal_reset.h',
  'mcu/apollo2/hal/am_hal_rtc.h',
  'mcu/apollo2/hal/am_hal_stimer.h',
  'mcu/apollo2/hal/am_hal_sysctrl.h',
  'mcu/apollo2/hal/am_hal_systick.h',
  'mcu/apollo2/hal/am_hal_tpiu.h',
  'mcu/apollo2/hal/am_hal_ttp.h',
  'mcu/apollo2/hal/am_hal_uart.h',
  'mcu/apollo2/hal/am_hal_vcomp.h',
  'mcu/apollo2/hal/am_hal_wdt.h',
  'mcu/apollo2/regs/am_reg_adc.h',
  'mcu/apollo2/regs/am_reg_base_addresses.h',
  'mcu/apollo2/regs/am_reg_cachectrl.h',
  'mcu/apollo2/regs/am_reg_clkgen.h',
  'mcu/apollo2/regs/am_reg_ctimer.h',
  'mcu/apollo2/regs/am_reg_flashctrl.h',
  'mcu/apollo2/regs/am_reg_gpio.h',
  'mcu/apollo2/regs/am_reg_iomstr.h',
  'mcu/apollo2/regs/am_reg_ioslave.h',
  'mcu/apollo2/regs/am_reg_itm.h',
  'mcu/apollo2/regs/am_reg_jedec.h',
  'mcu/apollo2/regs/am_reg_macros.h',
  'mcu/apollo2/regs/am_reg_macros_asm.h',
  'mcu/apollo2/regs/am_reg_mcuctrl.h',
  'mcu/apollo2/regs/am_reg_nvic.h',
  'mcu/apollo2/regs/am_reg_pdm.h',
  'mcu/apollo2/regs/am_reg_pwrctrl.h',
  'mcu/apollo2/regs/am_reg_rstgen.h',
  'mcu/apollo2/regs/am_reg_rtc.h',
  'mcu/apollo2/regs/am_reg_sysctrl.h',
  'mcu/apollo2/regs/am_reg_systick.h',
  'mcu/apollo2/regs/am_reg_tpiu.h',
  'mcu/apollo2/regs/am_reg_uart.h',
  'mcu/apollo2/regs/am_reg_vcomp.h',
  'mcu/apollo2/regs/am_reg_wdt.h',
  'mcu/apollo3/am_mcu_apollo.h',
  'mcu/apollo3/hal/am_hal_ctimer.h',
  'mcu/apollo3/hal/am_hal_mcuctrl.h',
  'mcu/apollo3/hal/am_hal_secure_ota.h',
  'mcu/apollo3/hal/am_hal_adc.h',
  'mcu/apollo3/hal/am_hal_ble.h',
  'mcu/apollo3/hal/am_hal_ble_patch.h',
  'mcu/apollo3/hal/am_hal_ble_patch_b0.h',
  'mcu/apollo3/hal/am_hal_burst.h',
  'mcu/apollo3/hal/am_hal_cachectrl.h',
  'mcu/apollo3/hal/am_hal_clkgen.h',
  'mcu/apollo3/hal/am_hal_cmdq.h',
  'mcu/apollo3/hal/am_hal_debug.h',
  'mcu/apollo3/hal/am_hal_flash.h',
  'mcu/apollo3/hal/am_hal_global.h',
  'mcu/apollo3/hal/am_hal_gpio.h',
  'mcu/apollo3/hal/am_hal_interrupt.h',
  'mcu/apollo3/hal/am_hal_iom.h',
  'mcu/apollo3/hal/am_hal_ios.h',
  'mcu/apollo3/hal/am_hal_itm.h',
  'mcu/apollo3/hal/am_hal_mspi.h',
  'mcu/apollo3/hal/am_hal_pdm.h',
  'mcu/apollo3/hal/am_hal_pin.h',
  'mcu/apollo3/hal/am_hal_pwrctrl.h',
  'mcu/apollo3/hal/am_hal_pwrctrl_internal.h',
  'mcu/apollo3/hal/am_hal_queue.h',
  'mcu/apollo3/hal/am_hal_reset.h',
  'mcu/apollo3/hal/am_hal_rtc.h',
  'mcu/apollo3/hal/am_hal_scard.h',
  'mcu/apollo3/hal/am_hal_security.h',
  'mcu/apollo3/hal/am_hal_status.h',
  'mcu/apollo3/hal/am_hal_stimer.h',
  'mcu/apollo3/hal/am_hal_sysctrl.h',
  'mcu/apollo3/hal/am_hal_systick.h',
  'mcu/apollo3/hal/am_hal_tpiu.h',
  'mcu/apollo3/hal/am_hal_uart.h',
  'mcu/apollo3/hal/am_hal_wdt.h',
  'mcu/apollo3/regs/am_reg.h',
  'mcu/apollo3/regs/am_reg_base_addresses.h',
  'mcu/apollo3/regs/am_reg_iomstr_cmd.h',
  'mcu/apollo3/regs/am_reg_jedec.h',
  'mcu/apollo3/regs/am_reg_m4.h',
  'mcu/apollo3/regs/am_reg_macros.h',
  'mcu/apollo3/regs/am_reg_macros_asm.h',
  'mcu/apollo3p/am_mcu_apollo.h',
  'mcu/apollo3p/hal/am_hal_debug.h',
  'mcu/apollo3p/hal/am_hal_mspi.h',
  'mcu/apollo3p/hal/am_hal_adc.h',
  'mcu/apollo3p/hal/am_hal_ble.h',
  'mcu/apollo3p/hal/am_hal_ble_patch_b0.h',
  'mcu/apollo3p/hal/am_hal_burst.h',
  'mcu/apollo3p/hal/am_hal_cachectrl.h',
  'mcu/apollo3p/hal/am_hal_clkgen.h',
  'mcu/apollo3p/hal/am_hal_cmdq.h',
  'mcu/apollo3p/hal/am_hal_ctimer.h',
  'mcu/apollo3p/hal/am_hal_flash.h',
  'mcu/apollo3p/hal/am_hal_global.h',
  'mcu/apollo3p/hal/am_hal_gpio.h',
  'mcu/apollo3p/hal/am_hal_interrupt.h',
  'mcu/apollo3p/hal/am_hal_iom.h',
  'mcu/apollo3p/hal/am_hal_ios.h',
  'mcu/apollo3p/hal/am_hal_itm.h',
  'mcu/apollo3p/hal/am_hal_mcuctrl.h',
  'mcu/apollo3p/hal/am_hal_pdm.h',
  'mcu/apollo3p/hal/am_hal_pin.h',
  'mcu/apollo3p/hal/am_hal_pwrctrl.h',
  'mcu/apollo3p/hal/am_hal_pwrctrl_helper.h',
  'mcu/apollo3p/hal/am_hal_queue.h',
  'mcu/apollo3p/hal/am_hal_reset.h',
  'mcu/apollo3p/hal/am_hal_rtc.h',
  'mcu/apollo3p/hal/am_hal_scard.h',
  'mcu/apollo3p/hal/am_hal_secure_ota.h',
  'mcu/apollo3p/hal/am_hal_security.h',
  'mcu/apollo3p/hal/am_hal_status.h',
  'mcu/apollo3p/hal/am_hal_stimer.h',
  'mcu/apollo3p/hal/am_hal_sysctrl.h',
  'mcu/apollo3p/hal/am_hal_systick.h',
  'mcu/apollo3p/hal/am_hal_tpiu.h',
  'mcu/apollo3p/hal/am_hal_uart.h',
  'mcu/apollo3p/hal/am_hal_wdt.h',
  'mcu/apollo3p/regs/am_reg.h',
  'mcu/apollo3p/regs/am_reg_base_addresses.h',
  'mcu/apollo3p/regs/am_reg_iomstr_cmd.h',
  'mcu/apollo3p/regs/am_reg_jedec.h',
  'mcu/apollo3p/regs/am_reg_m4.h',
  'mcu/apollo3p/regs/am_reg_macros.h',
  'mcu/apollo3p/regs/am_reg_macros_asm.h',
  'third_party/exactle/ble-host/include/att_api.h',
  'third_party/exactle/ble-host/include/att_defs.h',
  'third_party/exactle/ble-host/include/att_handler.h',
  'third_party/exactle/ble-host/include/att_uuid.h',
  'third_party/exactle/ble-host/include/dm_api.h',
  'third_party/exactle/ble-host/include/dm_handler.h',
  'third_party/exactle/ble-host/include/hci_api.h',
  'third_party/exactle/ble-host/include/hci_cmd.h',
  'third_party/exactle/ble-host/include/hci_core.h',
  'third_party/exactle/ble-host/include/hci_drv.h',
  'third_party/exactle/ble-host/include/hci_evt.h',
  'third_party/exactle/ble-host/include/hci_handler.h',
  'third_party/exactle/ble-host/include/hci_tr.h',
  'third_party/exactle/ble-host/include/l2c_api.h',
  'third_party/exactle/ble-host/include/l2c_defs.h',
  'third_party/exactle/ble-host/include/l2c_handler.h',
  'third_party/exactle/ble-host/include/sec_api.h',
  'third_party/exactle/ble-host/include/smp_api.h',
  'third_party/exactle/ble-host/include/smp_defs.h',
  'third_party/exactle/ble-host/include/smp_handler.h',
  'third_party/exactle/ble-host/sources/hci/ambiq/apollo3/hci_drv_apollo3.h',
  'third_party/exactle/ble-host/sources/hci/ambiq/em9304/hci_drv_em9304.h',
  'third_party/exactle/ble-host/sources/hci/ambiq/hci_core_ps.h',
  'third_party/exactle/ble-host/sources/hci/ambiq/hci_drv_apollo.h',
  'third_party/exactle/ble-host/sources/hci/ambiq/hci_tr_apollo.h',
  'third_party/exactle/ble-host/sources/sec/common/sec_main.h',
  'third_party/exactle/ble-host/sources/stack/att/attc_main.h',
  'third_party/exactle/ble-host/sources/stack/att/atts_main.h',
  'third_party/exactle/ble-host/sources/stack/att/att_main.h',
  'third_party/exactle/ble-host/sources/stack/att/att_sign.h',
  'third_party/exactle/ble-host/sources/stack/cfg/cfg_stack.h',
  'third_party/exactle/ble-host/sources/stack/dm/dm_adv.h',
  'third_party/exactle/ble-host/sources/stack/dm/dm_conn.h',
  'third_party/exactle/ble-host/sources/stack/dm/dm_dev.h',
  'third_party/exactle/ble-host/sources/stack/dm/dm_main.h',
  'third_party/exactle/ble-host/sources/stack/dm/dm_phy.h',
  'third_party/exactle/ble-host/sources/stack/dm/dm_priv.h',
  'third_party/exactle/ble-host/sources/stack/dm/dm_scan.h',
  'third_party/exactle/ble-host/sources/stack/dm/dm_sec.h',
  'third_party/exactle/ble-host/sources/stack/hci/hci_main.h',
  'third_party/exactle/ble-host/sources/stack/l2c/l2c_main.h',
  'third_party/exactle/ble-host/sources/stack/smp/smpi_main.h',
  'third_party/exactle/ble-host/sources/stack/smp/smpr_main.h',
  'third_party/exactle/ble-host/sources/stack/smp/smp_main.h',
  'third_party/exactle/ble-host/sources/stack/smp/smp_sc_main.h',
  'third_party/exactle/ble-profiles/include/app/app_api.h',
  'third_party/exactle/ble-profiles/include/app/app_cfg.h',
  'third_party/exactle/ble-profiles/include/app/app_db.h',
  'third_party/exactle/ble-profiles/include/app/app_hw.h',
  'third_party/exactle/ble-profiles/include/app/app_param.h',
  'third_party/exactle/ble-profiles/include/app/app_terminal.h',
  'third_party/exactle/ble-profiles/include/app/app_ui.h',
  'third_party/exactle/ble-profiles/include/app/ui_api.h',
  'third_party/exactle/ble-profiles/sources/apps/app/app_main.h',
  'third_party/exactle/ble-profiles/sources/apps/assettag/assettag_api.h',
  'third_party/exactle/ble-profiles/sources/apps/cycling/cycling_api.h',
  'third_party/exactle/ble-profiles/sources/apps/datc/datc_api.h',
  'third_party/exactle/ble-profiles/sources/apps/dats/dats_api.h',
  'third_party/exactle/ble-profiles/sources/apps/fit/fit_api.h',
  'third_party/exactle/ble-profiles/sources/apps/gluc/gluc_api.h',
  'third_party/exactle/ble-profiles/sources/apps/hidapp/hidapp_api.h',
  'third_party/exactle/ble-profiles/sources/apps/locator/locator_api.h',
  'third_party/exactle/ble-profiles/sources/apps/medc/medc_api.h',
  'third_party/exactle/ble-profiles/sources/apps/medc/medc_main.h',
  'third_party/exactle/ble-profiles/sources/apps/meds/meds_api.h',
  'third_party/exactle/ble-profiles/sources/apps/meds/meds_main.h',
  'third_party/exactle/ble-profiles/sources/apps/sensor/sensor_api.h',
  'third_party/exactle/ble-profiles/sources/apps/tag/tag_api.h',
  'third_party/exactle/ble-profiles/sources/apps/uribeacon/uribeacon_api.h',
  'third_party/exactle/ble-profiles/sources/apps/watch/watch_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/anpc/anpc_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/atpc/atpc_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/atps/atps_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/bas/bas_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/blpc/blpc_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/blps/blps_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/cpp/cpp_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/cscp/cscp_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/dis/dis_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/fmpl/fmpl_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/gap/gap_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/gatt/gatt_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/glpc/glpc_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/glps/glps_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/glps/glps_main.h',
  'third_party/exactle/ble-profiles/sources/profiles/hid/hid_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/hrpc/hrpc_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/hrps/hrps_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/htpc/htpc_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/htps/htps_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/include/wdx_defs.h',
  'third_party/exactle/ble-profiles/sources/profiles/paspc/paspc_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/plxpc/plxpc_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/plxps/plxps_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/plxps/plxps_main.h',
  'third_party/exactle/ble-profiles/sources/profiles/rscp/rscp_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/scpps/scpps_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/sensor/gyro_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/sensor/temp_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/tipc/tipc_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/udsc/udsc_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/uribeacon/uricfg_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/uribeacon/uricfg_defs.h',
  'third_party/exactle/ble-profiles/sources/profiles/wdxc/wdxc_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/wdxc/wdxc_main.h',
  'third_party/exactle/ble-profiles/sources/profiles/wdxs/wdxs_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/wdxs/wdxs_main.h',
  'third_party/exactle/ble-profiles/sources/profiles/wdxs/wdxs_stream.h',
  'third_party/exactle/ble-profiles/sources/profiles/wpc/wpc_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/wspc/wspc_api.h',
  'third_party/exactle/ble-profiles/sources/profiles/wsps/wsps_api.h',
  'third_party/exactle/ble-profiles/sources/services/svc_gls.h',
  'third_party/exactle/ble-profiles/sources/services/svc_alert.h',
  'third_party/exactle/ble-profiles/sources/services/svc_batt.h',
  'third_party/exactle/ble-profiles/sources/services/svc_bps.h',
  'third_party/exactle/ble-profiles/sources/services/svc_cfg.h',
  'third_party/exactle/ble-profiles/sources/services/svc_ch.h',
  'third_party/exactle/ble-profiles/sources/services/svc_core.h',
  'third_party/exactle/ble-profiles/sources/services/svc_cps.h',
  'third_party/exactle/ble-profiles/sources/services/svc_cscs.h',
  'third_party/exactle/ble-profiles/sources/services/svc_cte.h',
  'third_party/exactle/ble-profiles/sources/services/svc_dis.h',
  'third_party/exactle/ble-profiles/sources/services/svc_gyro.h',
  'third_party/exactle/ble-profiles/sources/services/svc_hid.h',
  'third_party/exactle/ble-profiles/sources/services/svc_hrs.h',
  'third_party/exactle/ble-profiles/sources/services/svc_hts.h',
  'third_party/exactle/ble-profiles/sources/services/svc_ipss.h',
  'third_party/exactle/ble-profiles/sources/services/svc_plxs.h',
  'third_party/exactle/ble-profiles/sources/services/svc_px.h',
  'third_party/exactle/ble-profiles/sources/services/svc_rscs.h',
  'third_party/exactle/ble-profiles/sources/services/svc_scpss.h',
  'third_party/exactle/ble-profiles/sources/services/svc_temp.h',
  'third_party/exactle/ble-profiles/sources/services/svc_time.h',
  'third_party/exactle/ble-profiles/sources/services/svc_uricfg.h',
  'third_party/exactle/ble-profiles/sources/services/svc_wdxs.h',
  'third_party/exactle/ble-profiles/sources/services/svc_wp.h',
  'third_party/exactle/ble-profiles/sources/services/svc_wss.h',
  'third_party/exactle/wsf/include/hci_defs.h',
  'third_party/exactle/wsf/include/ll_defs.h',
  'third_party/exactle/wsf/include/wsf_buf.h',
  'third_party/exactle/wsf/include/wsf_bufio.h',
  'third_party/exactle/wsf/include/wsf_efs.h',
  'third_party/exactle/wsf/include/wsf_math.h',
  'third_party/exactle/wsf/include/wsf_msg.h',
  'third_party/exactle/wsf/include/wsf_os.h',
  'third_party/exactle/wsf/include/wsf_queue.h',
  'third_party/exactle/wsf/include/wsf_timer.h',
  'third_party/exactle/wsf/sources/port/freertos/wsf_assert.h',
  'third_party/exactle/wsf/sources/port/freertos/wsf_cs.h',
  'third_party/exactle/wsf/sources/port/freertos/wsf_intrinsic.h',
  'third_party/exactle/wsf/sources/port/freertos/wsf_os_int.h',
  'third_party/exactle/wsf/sources/port/freertos/wsf_trace.h',
  'third_party/exactle/wsf/sources/port/freertos/wsf_types.h',
  'third_party/exactle/wsf/sources/util/bda.h',
  'third_party/exactle/wsf/sources/util/bstream.h',
  'third_party/exactle/wsf/sources/util/calc128.h',
  'third_party/exactle/wsf/sources/util/crc32.h',
  'third_party/exactle/wsf/sources/util/print.h',
  'third_party/exactle/wsf/sources/util/terminal.h',
  'third_party/exactle/wsf/sources/util/wstr.h',
  'third_party/FreeRTOSv10.1.1/Source/include/croutine.h',
  'third_party/FreeRTOSv10.1.1/Source/include/deprecated_definitions.h',
  'third_party/FreeRTOSv10.1.1/Source/include/event_groups.h',
  'third_party/FreeRTOSv10.1.1/Source/include/FreeRTOS.h',
  'third_party/FreeRTOSv10.1.1/Source/include/list.h',
  'third_party/FreeRTOSv10.1.1/Source/include/message_buffer.h',
  'third_party/FreeRTOSv10.1.1/Source/include/mpu_prototypes.h',
  'third_party/FreeRTOSv10.1.1/Source/include/mpu_wrappers.h',
  'third_party/FreeRTOSv10.1.1/Source/include/portable.h',
  'third_party/FreeRTOSv10.1.1/Source/include/projdefs.h',
  'third_party/FreeRTOSv10.1.1/Source/include/queue.h',
  'third_party/FreeRTOSv10.1.1/Source/include/semphr.h',
  'third_party/FreeRTOSv10.1.1/Source/include/StackMacros.h',
  'third_party/FreeRTOSv10.1.1/Source/include/stack_macros.h',
  'third_party/FreeRTOSv10.1.1/Source/include/stream_buffer.h',
  'third_party/FreeRTOSv10.1.1/Source/include/task.h',
  'third_party/FreeRTOSv10.1.1/Source/include/timers.h',
  'third_party/FreeRTOSv10.1.1/Source/portable/GCC/AMapollo/portmacro.h',
  'third_party/FreeRTOSv10.1.1/Source/portable/GCC/AMapollo2/portmacro.h',
  'third_party/FreeRTOSv10.1.1/Source/portable/GCC/ARM_CM4F/portmacro.h',
  'third_party/FreeRTOSv10.1.1/Source/portable/IAR/AMapollo/portmacro.h',
  'third_party/FreeRTOSv10.1.1/Source/portable/IAR/AMapollo2/portmacro.h',
  'third_party/FreeRTOSv10.1.1/Source/portable/IAR/ARM_CM4F/portmacro.h',
  'third_party/FreeRTOSv10.1.1/Source/portable/Keil/AMapollo/portmacro.h',
  'third_party/FreeRTOSv10.1.1/Source/portable/Keil/AMapollo2/portmacro.h',
  'third_party/FreeRTOSv10.1.1/Source/portable/Keil/ARM_CM4F/portmacro.h',
  'third_party/FreeRTOSv10.1.1/Source/portable/Keil6/AMapollo/portmacro.h',
  'third_party/FreeRTOSv10.1.1/Source/portable/Keil6/AMapollo2/portmacro.h',
  'third_party/FreeRTOSv10.1.1/Source/portable/Keil6/ARM_CM4F/portmacro.h',
  'third_party/uecc/uECC.h',
  'third_party/uecc/uECC_ll.h',
  'utils/am_util.h',
  'utils/am_util_ble.h',
  'utils/am_util_debug.h',
  'utils/am_util_delay.h',
  'utils/am_util_id.h',
  'utils/am_util_regdump.h',
  'utils/am_util_stdio.h',
  'utils/am_util_string.h',
  'utils/am_util_time.h',
])

install_headers(header_files, subdir: 'ambiq', preserve_path: true)

c_args = [
  '-DAM_CUSTOM_BDADDR', '-DAM_PACKAGE_BGA', '-DWSF_TRACE_ENABLED',
  '-DWSF_TRACE_ENABLED', '-DWSF_TRACE_ENABLED', '-DAM_PART_APOLLO3',
  '-DPART_APOLLO3', '-mthumb', '-mcpu=cortex-m4', '-mfpu=fpv4-sp-d16',
  '-mfloat-abi=hard', '-std=c17', '-ffunction-sections', '-Wall', '-Wextra',
  '-pedantic', '-fno-delete-null-pointer-checks',
]

link_args = [
  '--specs=nosys.specs', '--specs=nano.specs', '-mthumb',
  '-mcpu=cortex-m4', '-mfpu=fpv4-sp-d16', '-mfloat-abi=hard', '-nostartfiles',
  '-static', '-Wl,--gc-sections', '-fno-exceptions',
  '-fno-delete-null-pointer-checks',
]

lib = library(
  'rba_atp', apollo3_src + rba_atp_src + utils_src + devices_src,
  include_directories: includes,
  c_args: c_args,
  link_args: link_args,
  install: true,
)

pkg = import('pkgconfig')
pkg_subdirs = ['ambiq']

# Make sure to append 'ambiq' as we install headers in the ambiq subdir
foreach inc : includes_str
  pkg_subdirs += 'ambiq' / inc
endforeach
pkg.generate(lib, subdirs: pkg_subdirs)
